--- a/answerdigital/.classpath
+++ b/answerdigital/.classpath
@@ -3,23 +3,21 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/byte-buddy-1.8.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/client-combined-3.141.59.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/cobertura-2.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/cucumber-core-1.2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/cucumber-java-1.2.2.jar"/>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/cucumber-junit-1.2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/cucumber-jvm-deps-1.0.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/cucumber-reporting-0.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/gherkin-2.12.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/guava-25.0-jre.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/okhttp-3.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/griff/git/answerdigital/answerdigital/library/okio-1.14.0.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
